--- a/main/templates/creature.html
+++ b/main/templates/creature.html
@@ -1,5 +1,37 @@
 {% extends 'base.html' %}
+{% load static %}
+
+{% block 'links' %}
+<link rel="stylesheet" type="text/css" href="{% static 'main/css/creature.css' %}">
+{% endblock %}
 
 {% block 'content' %}
-    <h1>This is you.</h1>
+    <h1>Click on the questions or photo and enjoy changing!<span class="heart">&#x2665;</span></h1>
+    <br>
+
+    <div class="grid-container">
+        <div class="parameter1"><p><a href="#">Who are you?<br>What do you want from this life and from you?</a></p></div>
+        <div class="parameter2"><p><a href="#">What do you do every week? (work, study, housework)</a></p></div>
+        <div class="parameter3"><p><a href="#">What does your room or environment look like?</a></p></div>
+        <div class="parameter4"><p><a href="#">What are your habits?</a></p></div>
+        <div class="parameter_img"><a href="#"><img src="{% static 'main/img/this_is_me.jpg' %}" alt="this_human" title="This is you :&rang;" width="400px" height="700px"/></a></div>
+        <div class="parameter5"><p><a href="#">How do you spend your free time?</a></p></div>
+        <div class="parameter6">
+            <h1>Appearance</h1>
+            <p><a href="#">What do you look like?</a></p>
+        </div>
+        <div class="parameter7">
+            <h1>Behavior</h1>
+            <p><a href="#">What is your behavior like?</a></p>
+        </div>
+        <div class="parameter8">
+            <h1>Mind</h1>
+            <p><a href="#">How do you think?</a></p>
+        </div>
+    </div>
+    
+    <br>
+    <h1>Don't forget about the connection.</h1>
+    <p class="addition">For instance, the things that you do every day shape your thoughts and habits, just like how your free time and environment can influence you.</p>
+    <p class="addition">Additionally, if you think about doing the right things but don't actually do them, you develop a habit of 'not doing'.</p>
 {% endblock %}
