--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reality</title>
+    <title>&real;eality</title>
     <link rel="icon" type="image/x-icon" href="{% static 'main/img/favicon.ico' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'main/css/base.css' %}">
     {% block 'links' %}{% endblock %}
@@ -13,7 +13,6 @@
 <body>
     <header class="header">
         <div><a href="{% url 'creature' %}" class="you">YOU</a></div>
-        <!-- <div><a href="{% url 'sense' %}" class="sense">Sense</a></div> ??? -->
     </header>
     <div class="liner"></div>
     {% block 'content' %}
