--- a/main/templates/creature.html
+++ b/main/templates/creature.html
@@ -10,7 +10,7 @@
     <br>
 
     <div class="grid-container">
-        <div class="parameter1"><p><a href="#">Who are you?<br>What do you want from this life and from you?</a></p></div>
+        <div class="parameter1"><p><a href="{% url 'who_are_you' %}">Who are you?<br>What do you want from this life and from you?</a></p></div>
         <div class="parameter2"><p><a href="#">What do you do every week? (work, study, housework)</a></p></div>
         <div class="parameter3"><p><a href="#">What does your room or environment look like?</a></p></div>
         <div class="parameter4"><p><a href="#">What are your habits?</a></p></div>
