model, form. Parameter 1 who are you. It works. Basic work

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/x-icon" href="{% static 'main/img/favicon.ico' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'main/css/base.css' %}">
     {% block 'links' %}{% endblock %}
+    {% block 'style' %}{% endblock %}
 </head>
 <body>
     <header class="header">
