--- a/main/templates/error.html
+++ b/main/templates/error.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ error_number }} error</title>
+    <title>{{ error_number }} {{ error_name }}</title>
     <link rel="icon" type="image/x-icon" href="{% static 'main/img/favicon.ico' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'main/css/error.css' %}">
 </head>
