--- a/main/templates/creature.html
+++ b/main/templates/creature.html
@@ -16,7 +16,7 @@
         <div class="parameter4" style="opacity: 0;"><p><a href="">What are your habits?</a></p></div>
         <div class="parameter_img">
             <a href="{% url 'my_photo' %}">
-                <img src="{% static 'main/img/this_is_me.jpg' %}" alt="this_human" title="This is you :&rang;" width="400px" height="700px" style="border-radius: 40%;"/>
+                <img src="{% static 'main/img/this_is_me.jpg' %}" alt="this_human" title="This is you :&rang;"/>
             </a>
         </div>
         <div class="parameter5" style="opacity: 0;"><p><a href="">How do you spend your free time?</a></p></div>
