--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -15,7 +15,14 @@
     <header class="header">
         {% if user.is_authenticated %}
             <div><a href="{% url 'creature' %}" class="you">YOU</a></div>
-            <div><a href="{% url 'logout' %}">Log out</a></div>
+            <div>
+                <a href="{% url 'logout' %}" onclick="event.preventDefault(); document.getElementById('logout_form').submit();">
+                    Log out
+                </a>
+            </div>
+            <form action="{% url 'logout' %}" method="post" id="logout_form" style="display: none;">
+                {% csrf_token %}
+            </form>
         {% endif %}
     </header>
     <div class="liner"></div>
