--- a/main/templates/start.html
+++ b/main/templates/start.html
@@ -1,28 +1,12 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Start page</title>
-    <style>
-        body {
-            display: flex;
-            margin: 20px;
-            justify-content: center;
-            align-items: center;
-            justify-content: space-between;
-            flex-wrap: wrap;
-        }
-        h1 {
-            font-size: 100px;
-        }
-        p {
-            font-size: 80px;
-        }
-        a {
-            text-decoration: none;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="{% static 'main/css/form.css' %}">
 </head>
 <body>
     {% if not user.is_authenticated %}
