--- a/static/main/css/form.css
+++ b/static/main/css/form.css
@@ -8,17 +8,17 @@ form {
 }
 li {
     display: block;
-    font-size: 25Spx;
+    font-size: 25px;
     padding-left: 20px;
     color: brown;
 }
 label {
-    font-size: 40px;
+    font-size: 34px;
     padding-left: 20px;
 }
 input, textarea {
     border-radius: 3%;
-    font-size: 40px;
+    font-size: 32px;
     padding: 10px;
 }
 input {
@@ -28,12 +28,13 @@ input {
 textarea {
     height: 173px;
     width: 1105px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 button, input[type="submit"] {
     height: 65px;
     width: 330px;
     border-radius: 3%;
-    font-size: 30px;
+    font-size: 32px;
     margin: 10px;
 }
 p {
