--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -14,6 +14,7 @@
 <body>
     <header class="header">
         {% if user.is_authenticated %}
+            <div><a href="{% url 'feedback' %}" class="feedback">Feedback</a></div>
             <div><a href="{% url 'creature' %}" class="you">YOU</a></div>
             <div>
                 <a href="{% url 'logout' %}" onclick="event.preventDefault(); document.getElementById('logout_form').submit();">
