--- a/main/templates/parameters_forms/my_photo.html
+++ b/main/templates/parameters_forms/my_photo.html
@@ -1,15 +1,8 @@
-{% extends 'base.html' %}
-{% load static %}
-
-{% block 'links' %}<link rel="stylesheet" type="text/css" href="{% static 'main/css/form.css' %}">{% endblock %}
-
-{% block 'content' %}
-    <form method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        <h1>Image</h1>
-        <p>{{ form.image }}</p>
-        <h1>Date&Time<br>when your image was created.<br>Pattern: 2024-01-07 20:19:11.00</h1>
-        <p>{{ form.date_time_pict }}</p>
-        <div><input type="submit" value="Submit"></div>
-    </form>
+{% extends 'base_form.html' %} 
+    
+{% block 'questions' %}
+    <h1>Image</h1>
+    <p>{{ form.image }}</p>
+    <h1>Date&Time<br>when your image was created.<br>Pattern: 2024-01-07 20:19:11.00</h1>
+    <p>{{ form.date_time_pict }}</p>
 {% endblock %}
