--- a/main/templates/parameters_forms/what_do_you_do.html
+++ b/main/templates/parameters_forms/what_do_you_do.html
@@ -1,22 +1,5 @@
-{% extends 'base.html' %} 
-{% load static %}
-
-{% block 'links' %}<link rel="stylesheet" type="text/css" href="{% static 'main/css/form.css' %}">{% endblock %}
+{% extends 'base_form.html' %} 
     
-{% block 'content' %}
+{% block 'questions' %}
     <h1>What do you do every week?<br>(work, study, housework)</h1>
-    <form method="post">
-        {% csrf_token %}
-        <!-- Pattern:
-            <div>
-            <p>{{ form.name.label_tag }}</p>
-            {{ form.name }}
-            </div> 
-        -->
-        
-        <div>
-            <input type="submit" value="Save my info">
-        </div>
-        
-    </form>
 {% endblock %}
