--- a/main/templates/parameters_forms/what_do_you_do.html
+++ b/main/templates/parameters_forms/what_do_you_do.html
@@ -2,4 +2,12 @@
     
 {% block 'questions' %}
     <h1>What do you do every week?<br>(work, study, housework)</h1>
+    <h1>{{ form.text1.label }}</h1>
+    <p>{{ form.text1 }}</p>
+    <h1>{{ form.text2.label }}</h1>
+    <p>{{ form.text2 }}</p>
+    <h1>{{ form.text3.label }}</h1>
+    <p>{{ form.text3 }}</p>
+    <h1>{{ form.text4.label }}</h1>
+    <p>{{ form.text4 }}</p>
 {% endblock %}
