--- a/main/templates/show/show_what_do_you_do.html
+++ b/main/templates/show/show_what_do_you_do.html
@@ -4,17 +4,20 @@
 {% block 'links' %}<link rel="stylesheet" type="text/css" href="{% static 'main/css/form.css' %}">{% endblock %}
 {% block 'style' %}
 <style>
-    img {
-        height: 50vh;
-        border-radius: 35%;
-    }
+    /* #text {
+        font-size: large;
+    } */
 </style>
 {% endblock %}
 
 {% block 'content' %}
-    <img src="{{ media }}{{ model.image }}">
-    <h1>Date&Time of your picture</h1>
-    <p>{{ model.date_time_pict }}</p>
+    <h1>Your answers:</h1>
+    <p>{{ model.text1 }}</p>
+    <p>{{ model.text2 }}</p>
+    <p>{{ model.text3 }}</p>
+    <p>{{ model.text4 }}</p>
+    <p>{{ model.changes }}</p>
+    <p>{{ model.what_why_how }}</p>
     <hr>
     <p>{{ model.date_time }}</p>
 {% endblock %}
