--- a/main/templates/creature.html
+++ b/main/templates/creature.html
@@ -23,7 +23,7 @@
         <!-- In developing... (where style="opacity: 0;") and no # -->
         <div class="parameter6">
             <h1>Appearance</h1>
-            <p><a href="{% url 'look_like' %}">What do you look like?</a></p>
+            <p><a href="{% url 'appearance' %}">What do you look like?</a></p>
         </div>
         <div class="parameter7">
             <h1>Behavior</h1>
@@ -31,7 +31,7 @@
         </div>
         <div class="parameter8">
             <h1>Mind</h1>
-            <p><a href="{% url 'thoughts_direction' %}">How do you think?</a></p>
+            <p><a href="{% url 'mind' %}">How do you think?</a></p>
         </div>
     </div>
     
