--- a/main/templates/parameters_forms/base_form.html
+++ b/main/templates/parameters_forms/base_form.html
@@ -13,6 +13,8 @@
                     <p>{{ form.name }}</p>
                 </div> 
         -->
+        <h1>{{ form.text0.label }}</h1>
+        <p>{{ form.text0 }}</p>
         {% block 'questions' %}
         {% endblock %}
         <h1>{{ form.changes.label }}</h1>
