--- a/main/static/main/css/creature.css
+++ b/main/static/main/css/creature.css
@@ -6,8 +6,9 @@ a {
 .heart {
     color: blue;
 }
-img {
+img, picture > source {
     border-radius: 40%;
+    width: 23vw;
 }
 .grid-container {
     display: grid;
