--- a/static/main/css/base.css
+++ b/static/main/css/base.css
@@ -7,6 +7,17 @@ body {
     background-color:  var(--gray-metal);
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
+hr {
+    display: block;
+    unicode-bidi: isolate;
+    margin-block-start: 0.5em;
+    margin-block-end: 0.5em;
+    margin-inline-start: auto;
+    margin-inline-end: auto;
+    overflow: hidden;
+    border-style: inset;
+    border-width: 1px;
+}
 header {
     display: flex;
     flex-wrap: wrap;
