feature 'Update' img

--- a/main/templates/creature.html
+++ b/main/templates/creature.html
@@ -16,12 +16,13 @@
         <div class="parameter4"><p><a href="{% url 'habits' %}">What are your habits?</a></p></div>
 
         <div class="parameter_img">
-            <picture>
-                <a href="{% url 'my_photo' %}">
+            <a href="{% url 'my_photo' %}">
+                {% if image %}
+                    <img src="{{ media }}{{ image }}" alt="This is you" title="This is you :&rang;"/>
+                {% else %}
                     <img src="{% static 'main/img/this_is_me.jpg' %}" alt="This is a human" title="This is a human :&rang;"/>
-                    <source srcset="{{ media }}{{ way }}" alt="This is you" title="This is you :&rang;">
-                </a>
-            </picture>              
+                {% endif %}
+            </a>             
         </div>
 
         <div class="parameter5"><p><a href="{% url 'free_time' %}">How do you spend your free time?</a></p></div>
