--- a/main/templates/show/show_who_are_you.html
+++ b/main/templates/show/show_who_are_you.html
@@ -1,16 +1,6 @@
-{% extends 'base.html' %}
-{% load static %}
+{% extends 'base_show.html' %}
 
-{% block 'links' %}<link rel="stylesheet" type="text/css" href="{% static 'main/css/form.css' %}">{% endblock %}
-
-{% block 'content' %}
-<form method="post">
-    {% csrf_token %}
-    <h1 style="text-decoration: underline;">Copy your text, paste in the gaps and edit!<br>Or you will get lost your data.</h1>
-    <h1>{{ form.text0.label }}</h1>
-    <p>{{ model.text0 }}</p>
-    <p>{{ form.text0 }}</p>
-
+{% block 'questions' %}
     <h1>{{ form.name.label }}</h1>
     <p>{{ model.name }}</p>
     <p>{{ form.name }}</p>
@@ -22,19 +12,4 @@
     <h1>{{ form.goals.label }}</h1>
     <p>{{ model.goals }}</p>
     <p>{{ form.goals }}</p>
-
-    <h1>{{ form.changes.label }}</h1>
-    <p>{{ model.changes }}</p>
-    <p>{{ form.changes }}</p>
-
-    <h1>{{ form.what_why_how.label }}</h1>
-    <p>{{ model.what_why_how }}</p>
-    <p>{{ form.what_why_how }}</p>
-
-    <p>{{ model.date_time }}</p> 
-
-    <div>
-        <input type="submit" value="Save my info">
-    </div>
-</form>
 {% endblock %}
