--- a/main/templates/show/base_show.html
+++ b/main/templates/show/base_show.html
@@ -8,21 +8,18 @@
     {% csrf_token %}
     <h1 style="text-decoration: underline;">Copy your text, paste in the gaps and edit!<br>Or you will get lost your data.</h1>
     <h1>{{ form.text0.label }}</h1>
-    <p>{{ model.text0 }}</p>
     <p>{{ form.text0 }}</p>
 
     {% block 'questions' %}
     {% endblock %}
 
     <h1>{{ form.changes.label }}</h1>
-    <p>{{ model.changes }}</p>
     <p>{{ form.changes }}</p>
 
     <h1>{{ form.what_why_how.label }}</h1>
-    <p>{{ model.what_why_how }}</p>
     <p>{{ form.what_why_how }}</p>
 
-    <p>{{ model.date_time }}</p> 
+    <p>{{ date_time }}</p> 
 
     <div>
         <input type="submit" value="Save my info">
