input format and del past user's photo

--- a/main/templates/parameters_forms/my_photo.html
+++ b/main/templates/parameters_forms/my_photo.html
@@ -3,6 +3,6 @@
 {% block 'questions' %}
     <h1>Image</h1>
     <p>{{ form.image }}</p>
-    <h1>Date&Time<br>when your image was created.<br>Pattern: 2024-01-07 20:19:11.00</h1>
+    <h1>Date&Time<br>when your image was created.<br>Pattern: 10/25/2006 14:30</h1>
     <p>{{ form.date_time_pict }}</p>
 {% endblock %}
