--- a/main/templates/parameters_forms/my_photo.html
+++ b/main/templates/parameters_forms/my_photo.html
@@ -4,5 +4,5 @@
     <h1>Image</h1>
     <p>{{ form.image }}</p>
     <h1>Date&Time<br>when your image was created.<br>Pattern: 10/25/2006 14:30</h1>
-    <p>{{ form.date_time_pict }}</p>
+    <p class="date_time_pict">{{ form.date_time_pict }}</p>
 {% endblock %}
