scripts for inputmask js

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -31,6 +31,8 @@
     <div class="liner"></div>
     {% block 'content' %}
     {% endblock %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/5.0.6/jquery.inputmask.min.js"></script>
     <script type="application/javascript" src="{% static 'main/js/base.js' %}" charset="utf-8"></script>
 </body>
 </html>
